testdata/baselines/reference/submodule/compiler/compositeGenericFunction.errors.txt
compositeGenericFunction.ts(3,44): error TS2322: Type 'null' is not assignable to type 'R'.


==== compositeGenericFunction.ts (1 errors) ====
    function f<T>(value: T) { return value; };
    
    function h<R>(func: (x: number) => R): R { return null; }
                                               ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'R'.
    
    var z: number = h<number>(f);
    var z: number = h(f);